--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -7,12 +7,4 @@
   </li>
 </ul>
 
-<div *ngIf="selectedHero">
-  <h1>{{ selectedHero.name }}</h1>
-  <div><span>id: </span>{{ selectedHero.id }}</div>
-  <div>
-    <label>name:
-      <input [(ngModel)]="selectedHero.name" placeholder="name">
-    </label>
-  </div>
-</div>
+<app-hero-detail [hero]="selectedHero"></app-hero-detail>
